<resources>
    <string name="app_name">Mind Guide</string>
    <string name="message_login_page">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="click_here">Click here</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_now">Join Now</string>
    <string name="greetings_new_friend">Greetings, new friend!</string>
    <string name="have_an_account">Have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_worry_we_re_here">Don\'t Worry, We\'re Here</string>
    <string name="remember_your_password">Remember your password?</string>
    <string name="reset">Reset</string>
    <string name="You_must_confirm_the_verification">You must confirm the verification link sent to your email address.</string>
    <string name="Login_successful">Login successful</string>
    <string name="Login_unsuccessful">Login unsuccessful</string>
    <string name="The_password_is_incorrect">The password is incorrect, please try again.</string>
    <string name="The_entered_email_address_could_not_be_found">The entered email address could not be found.</string>
    <string name="please_fill_in_all_required_fields">Please fill in all required fields.</string>
    <string name="Password_must_be_at_least_8_characters_long">Password must be at least 8 characters long</string>
    <string name="User_registration_successful">User registration successful</string>
    <string name="This_email_address_is_already_in_use">This email address is already in use</string>
    <string name="Registration_could_not_be_completed">Registration could not be completed</string>
    <string name="Please_confirm_the_verification_link">Please confirm the verification link sent to your email address</string>
    <string name="verification_link_could_not_be">Verification link could not be sent. Please try again.</string>
    <string name="person">My Family and Friends</string>
    <string name="family_and_firends">You can add information about the individuals in your family and friends</string>
    <string name="logout">Logout</string>
    <string name="password_reset">The password reset link has been sent to your email address</string>
    <string name="no_registered_user_found">No registered user found with this email address</string>
    <string name="failed_to_send_password_reset_email">Failed to send password reset email</string>
    <string name="add_person">Add Person</string>
    <string name="the_person_s_name">The person\'s name</string>
    <string name="the_person_s_profession">The person\'s profession</string>
    <string name="how_old_is_this_person">How old is this person?</string>
    <string name="write_about_this_person">Write about this person</string>
    <string name="permission_is_required">Permission is required</string>
    <string name="grant_permission">Grant permission</string>
    <string name="the_person_saved">The person saved</string>
    <string name="an_error_occurred_during_image_upload">An error occurred during image upload</string>
    <string name="permission_is_required_to_access_the_gallery">Permission is required to access the gallery</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Deleted</string>
    <string name="not_deleted">Not deleted</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this?</string>
    <string name="add_place">Add Place</string>
    <string name="give_a_title_to_this_place">Give a title to this place</string>
    <string name="write_something_about_the_place">Write something about the place</string>
    <string name="add_location">Add Location</string>
    <string name="the_location_has_been_set">The location has been set</string>
    <string name="places">Places</string>
    <string name="location_saved">Location saved</string>
    <string name="add_the_locations_of_the_places_you_know">Add the locations of the places you know.</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="save">SAVE</string>
    <string name="permission_is_required_for_maps">Permission is required for maps</string>
    <string name="long_tap_on_the">Long tap on the location you want to add</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you want to leave without saving the location?</string>
    <string name="view_location">View Location</string>
    <string name="location">Location</string>


</resources>