<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"

    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="invisible" />
    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerline"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        app:srcCompat="@drawable/login_image"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerline"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/message_login_page"
            android:textColor="#ffeb3b"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/centerline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:padding="5dp"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerline"
        android:layout_marginLeft="30dp"
        android:textColorHint="@color/white"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <EditText

            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:inputType="numberPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:textAllCaps="false"
        android:text="@string/sign_in"
        android:textColor="@color/color_of_the_wave"
        android:textSize="20sp"
        android:textStyle="bold">

    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wave_background"
            android:text="@string/forget_your_password"/>


        <TextView
            android:id="@+id/textViewForgotPasswordClickHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/wave_background"
            android:textStyle="bold"/>
    </LinearLayout>


    <Button
        android:textAllCaps="false"
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textColor="@color/color_of_the_wave"
        android:textSize="20sp"
        android:textStyle="bold">

    </Button>


</RelativeLayout>



