<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"

    tools:context=".ResetPasswordActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerline"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        app:srcCompat="@drawable/login_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerline"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reset_password"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/don_t_worry_we_re_here"
            android:textColor="#ffeb3b"
            android:textSize="18sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/centerline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:padding="5dp"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerline"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        app:boxBackgroundColor="@color/transparent">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:textAllCaps="false"
        android:text="@string/reset"
        android:textColor="@color/color_of_the_wave"
        android:textSize="20sp"
        android:elevation="20dp"
        android:textStyle="bold">

    </Button>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonResetPassword"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/wave_background"
            android:text="@string/remember_your_password"/>


        <TextView
            android:id="@+id/textViewClickHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/wave_background"
            android:textStyle="bold"/>
    </LinearLayout>





</RelativeLayout>






