<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wave_background"
    android:orientation="vertical"
    tools:context=".AddPersonActivity">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/wave" />
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_person"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <ImageView
                android:id="@+id/imagePerson"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:scaleType="fitCenter"
                android:src="@drawable/add_person_image" />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                app:cardElevation="3dp">


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/text_view_background"
                        android:textColorHint="@color/color_hint">

                        <EditText
                            android:id="@+id/editText_personName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/text_view_background_color"
                            android:gravity="center"
                            android:hint="@string/the_person_s_name"
                            android:padding="5dp"
                            android:textAlignment="center"
                            android:textColor="@color/textViewVeEditText_color"
                            android:textColorHint="@color/color_hint"
                            android:textSize="20sp" />
                    </com.google.android.material.textfield.TextInputLayout>



            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="3dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_view_background"
                    android:textColorHint="@color/color_hint">

                    <EditText
                        android:id="@+id/editText_personProfession"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/text_view_background_color"
                        android:gravity="center"
                        android:hint="@string/the_person_s_profession"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/textViewVeEditText_color"
                        android:textColorHint="@color/color_hint"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>



            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="3dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_view_background"
                    android:textColorHint="@color/color_hint">


                    <EditText
                        android:inputType="number"
                        android:id="@+id/editText_personAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/text_view_background_color"
                        android:gravity="center"
                        android:hint="@string/how_old_is_this_person"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/textViewVeEditText_color"
                        android:textColorHint="@color/color_hint"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="3dp">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/text_view_background_color"
                        android:textColorHint="@color/color_hint">

                        <EditText
                            android:id="@+id/edit_text_personAbout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/text_view_background"
                            android:gravity="center"
                            android:hint="@string/write_about_this_person"
                            android:inputType="textMultiLine"
                            android:maxLines="10"
                            android:padding="5dp"
                            android:textAlignment="center"
                            android:textColor="@color/textViewVeEditText_color"
                            android:textColorHint="@color/color_hint"
                            android:textSize="18sp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </ScrollView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonFabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/color_of_the_toolbar"
        android:src="@drawable/icon_save"
        app:maxImageSize="35dp" />

</RelativeLayout>





